--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ raw_reads/core5_run2/AS161_S50_L001_R1_001.fastq.gz
 concat/AS161_S50_L001_R1_001.fastq.gz
 concat/AS161_S50_L001_R2_001.fastq.gz
 concat/filtered/AS161_F_filt.fastq.gz
+raw_reads/Amirrun318.zip.gz
+raw_reads/core5_run2.rar.gz
+raw_reads/core5_run2/AS161_S50_L001_R2_001.fastq.gz
+raw_reads/core5_run2/AS161_S50_L001_R1_001.fastq.gz
